# SideBySide

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  sample_wordlist.csv
backend/: .dockerignore  Dockerfile  README.md  data.db  pyproject.toml  requirements.txt
backend/app/: db.py  deps.py  main.py  models.py
backend/app/core/: config.py  logging.py  security.py
backend/app/routers/: auth.py  leaderboard.py  reports.py  sessions.py  users.py  wordlists.py
backend/app/services/: llm_enrich.py  vision_to_words.py
backend/app/services/agents/: __init__.py  definition_judge_agent.py  images2words_agent.py
backend/app/utils/: parser.py
backend/llm_api_loader/: __init__.py  llm_loader.py
backend/tests/: README.md  conftest.py  test_definition_judge_agent.py  test_images2words_agent.py  test_output.json  vision_to_words.py
backend/tests/llm_api_loader/: __init__.py
docs/: DEPLOY.zh-CN.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: MyWordlists.tsx  Progress.tsx  Upload.tsx  Wordlist.tsx
llm_api_loader/: README.md  __init__.py  example_usage.py  llm_config.py  llm_loader.py
scripts/: deploy_via_ssh.sh
